k8s-local/cilium/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  hostnames:
    - hubble.localhost
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: hubble-ui
          port: 80
